add standalone registration dumper; add a stream viewer which is useful for visually testing registration

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_C_FLAGS "-Wall")
 if (WIN32)
   set_source_files_properties(glview.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(regview.c PROPERTIES LANGUAGE CXX)
+  set_source_files_properties(fakenect_regview.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(glpclview.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(hiview.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(tiltdemo.c PROPERTIES LANGUAGE CXX)
@@ -19,6 +20,8 @@ endif()
 
 add_executable(glview glview.c)
 add_executable(regview regview.c)
+add_executable(fakenect_regview fakenect_regview.c)
+add_executable(fakenect_dump_registration fakenect_dump_registration.c)
 add_executable(hiview hiview.c)
 if(BUILD_AUDIO)
   add_executable(wavrecord wavrecord.c)
@@ -39,6 +42,8 @@ if(APPLE)
   set(CMAKE_EXE_LINKER_FLAGS "-framework OpenGL -framework GLUT")
   target_link_libraries(glview freenect)
   target_link_libraries(regview freenect)
+  target_link_libraries(fakenect_regview freenect)
+  target_link_libraries(fakenect_dump_registration freenect)
   target_link_libraries(hiview freenect)
   if (BUILD_AUDIO)
     target_link_libraries(wavrecord freenect)
@@ -60,6 +65,8 @@ else()
 
   target_link_libraries(glview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
   target_link_libraries(regview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
+  target_link_libraries(fakenect_regview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
+  target_link_libraries(fakenect_dump_registration freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
   target_link_libraries(hiview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
   if (BUILD_AUDIO)
     target_link_libraries(wavrecord freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
@@ -74,7 +81,7 @@ else()
 endif()
 
 
-install (TARGETS glview regview hiview
+install (TARGETS glview regview fakenect_regview hiview
   DESTINATION bin)
 
 if (BUILD_C_SYNC)
